--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
     "include": [
         "next-env.d.ts",
         "**/*.ts",
-        "**/*.tsx",
-        "src/pages/_app.js"
+        "**/*.tsx"
     ],
     "exclude": [
         "node_modules"
