--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "ignews_test",
+  "name": "ignews",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest --coverage",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@prismicio/client": "^5.1.0",
-    "@stripe/stripe-js": "^1.17.1",
-    "axios": "^0.21.4",
-    "faunadb": "^4.4.1",
-    "next": "11.1.2",
-    "next-auth": "^3.29.0",
-    "prismic-dom": "^2.2.6",
+    "@prismicio/client": "^4.0.0",
+    "@stripe/stripe-js": "^1.13.2",
+    "axios": "^0.21.1",
+    "faunadb": "^4.1.2",
+    "next": "10.0.9",
+    "next-auth": "^3.13.3",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.38.2",
-    "stripe": "^8.174.0"
+    "sass": "^1.32.8",
+    "stripe": "^8.139.0"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.15.0",
-    "@types/node": "^16.7.10",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/next-auth": "3.7.1",
+    "@types/node": "^14.14.35",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^17.0.19",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "^4.4.2"
+    "@types/react": "^17.0.3",
+    "babel-jest": "^27.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
+    "jest-dom": "^4.0.0",
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.2.3"
   }
 }
